fixed broken styles

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,23 +1,13 @@
-body {
-    margin: 0;
-    height: 75vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 25px;
-    background: ;
-    background-size: cover;
+.form-group-ex {
+  margin-bottom: 1rem;
 }
-.form-group{
-    margin-bottom: 1rem;;
-}
-.row{
-    width: 400px;
-    max-width: 400px;
-    margin: 1rem;
-    margin-top: 10rem;
-    padding: 2rem;
-    box-shadow: 0 0 40px rgba(0, 0, 0.2);
-    border-radius: var(--border-radius);
-    background: #ffffff;
+.row-ex {
+  width: 400px;
+  max-width: 400px;
+  margin: 1rem;
+  margin-top: 10rem;
+  padding: 2rem;
+  box-shadow: 0 0 40px rgba(0, 0, 0.2);
+  border-radius: var(--border-radius);
+  background: #ffffff;
 }
